[package]
name = "gdal-build"
version = "3.100.0"
edition = "2021"
description = "A linker utility for gdal-win crate"
license = "Apache-2.0"
documentation = "https://github.com/geocrate/gdal-build"
homepage = "https://github.com/geocrate/gdal-build"
repository = "https://github.com/geocrate/gdal-build"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
sevenz-rust = "0.6.1"
