[package]
name = "gdal-setup"
version = "3.100.0"
edition = "2021"
description = "A setup utility for gdal-win crate (lib / dll)"
license = "Apache-2.0"
repository = "https://github.com/geocrate/gdal-setup"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
sevenz-rust = "0.6.1"
